<?php

namespace Entity;

use Entity\Employee;

class Administrative extends Employee
{

}